--- a/ran-sim/src/app/mapview/mapview.component.html
+++ b/ran-sim/src/app/mapview/mapview.component.html
@@ -1,6 +1,1 @@
-<div><h1>Hello Sample Code</h1></div>
-<!--<div class="map-container">-->
-<!--    <div class="map-frame">-->
-<!--        <div id="map"></div>-->
-<!--    </div>-->
-<!--</div>-->
+<h1>Hello World</h1>
